[tool.poetry]
name = "drone-routing"
version = "0.1.0"
description = ""
authors = ["rafacelente <rafaelmcelente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
numpy = "^2.1.1"
stable-baselines3 = "^2.3.2"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
